# jsmoke

./: Cargo.toml  README.md
crates/jsmoke/: Cargo.toml  README.md
crates/jsmoke/src/: main.rs
crates/jsmoke_application/: Cargo.toml  README.md
crates/jsmoke_application/src/: lib.rs
crates/jsmoke_cli/: Cargo.toml  README.md
crates/jsmoke_cli/src/: common.rs  lib.rs  prelude.rs
crates/jsmoke_cli/src/app/: mod.rs  style.rs
crates/jsmoke_cli/src/app/subcommands/: mod.rs  new.rs
crates/jsmoke_cli/src/types/: dot_notation.rs  mod.rs  vcs.rs  version_control_system.rs
crates/jsmoke_cli/src/types/project/: group.rs  lock_version.rs  mod.rs  path.rs
crates/jsmoke_lib/: Cargo.toml
crates/jsmoke_lib/src/: lib.rs
crates/jsmoke_lib/src/app/: app_core.rs  mod.rs
crates/jsmoke_lib/src/app/cli/: mod.rs
crates/jsmoke_lib/src/app/cli/subcommands/: init.rs  mod.rs  new.rs
crates/jsmoke_lib/src/app/contexts/: mod.rs
crates/jsmoke_lib/src/app/subcommands/: new.rs
crates/jsmoke_lib/src/config/: app_fields.rs  mod.rs
crates/jsmoke_lib/src/utils/: arg_matches.rs  mod.rs
crates/jsmoke_macros/: Cargo.toml  README.md
crates/jsmoke_macros/src/: lib.rs
crates/jsmoke_utils/: Cargo.toml  README.md
crates/jsmoke_utils/src/: checkable.rs  computer_command.rs  exit.rs  lib.rs  may.rs  print_verbose.rs  verbose.rs
crates/jsmoke_utils/src/jsmk_regex/: how_much_of_pattern.rs  mod.rs  regex_builder.rs  regex_wrapper.rs
crates/jsmoke_utils/src/printing/: error_print.rs  mod.rs  warning_print.rs
crates/jsmoke_utils/src/strings/: auto_trim.rs  chunk_by_any.rs  mod.rs  repr.rs
crates/jsmoke_utils/src/visuals/: color_highlights.rs  mod.rs  tags.rs
deprecated/: README.md
deprecated/libs/jsmoke_application/: Cargo.toml  README.md
deprecated/libs/jsmoke_cli/: Cargo.toml  README.md
deprecated/libs/jsmoke_macros/: Cargo.toml
deprecated/libs/jsmoke_utils/: Cargo.toml  README.md
docs/: README.md  about.md
docs/architecture/: README.md
docs/design/: README.md
src/: exit.rs  main.rs
src/cli/: mod.rs
src/cli/subcommands/: mod.rs  new.rs
src/utils/: mod.rs  printer.rs  verbose.rs
src/utils/metadata/: mod.rs  project_name.rs
src/utils/visuals/: list.rs  mod.rs
