[package]
name = "jsmoke_macros"
version = "0.3.2"
description = "JSmoke personal macros"
readme = "README.md"
edition = "2024"
license = "MIT"
authors = ["nasccped <pdbt.contact@gmail.com>"]
repository = "https://github.com/nasccped/jsmoke/tree/jsmoke_macros-lib"
exclude = ["target/", ".git/", ".gitignore"]

[dependencies]
