[package]
name = "jsmoke"
version = "0.1.2"
description = "A simple project manager targeting java applications"
edition = "2024"
authors = ["nasccped <pdbt.contact@gmail.com>"]
repository = "https://github.com/nasccped/jsmoke"
readme = "README.md"
license = "MIT"
keywords = ["java", "project-manager", "cli"]
categories = ["command-line-utilities"]
exclude = ["target/", ".git/", ".gitignore", "deprecated/"]

[[bin]]
name = "jsmk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
regex = "1.12.2"
thiserror = "2.0.17"
