[package]
name = "jsmoke"
version = "0.1.0"
description = "The JSmoke binary entry point"
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[[bin]]
name = "jsmk"
path = "src/main.rs"

[dependencies]
jsmoke_cli = { path = "../jsmoke_cli" }
jsmoke_utils = { path = "../jsmoke_utils/" }
