[package]
name = "jsmoke_application"
version = "1.0.0"
description = "JSmoke application use cases"
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
