[package]
name = "jsmoke_cli"
version = "0.1.0"
description = "JSmoke CLI parser and application implementer"
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
