[package]
name = "jsmoke_cli"
version = "0.1.0"
description = "JSmoke CLI parser and application implementer"
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
clap.workspace = true
jsmoke_utils.workspace = true
jsmoke_macros.workspace = true
thiserror.workspace = true
regex.workspace = true
