[package]
name = "jsmoke_macros"
version = "0.3.1"
description = "JSmoke personal macros"
readme = "README.md"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
