[package]
name = "jsmoke_utils"
version = "0.1.0"
description = "JSmoke program utilities"
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
colored.workspace = true
thiserror.workspace = true
jsmoke_macros.workspace = true
regex.workspace = true
