[package]
name = "jsmoke_cli"
version = "0.1.2"
description = "JSmoke CLI parser and application implementer"
edition = "2024"
authors = ["nasccped <pdbt.contact@gmail.com>"]
repository = "https://github.com/nasccped/jsmoke/tree/main/deprecated/libs/jsmoke_cli"
readme = "README.md"
license = "MIT"
exclude = ["target/", ".git/", ".gitignore"]

[dependencies]
